--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,7 @@
 {erl_opts, [debug_info]}.
-{deps, []}.
+{deps, [
+    {uuid, "1.7.4", {pkg, uuid_erl}}
+]}.
 
 {shell, [
   % {config, [{config, "config/sys.config"}]},
