rebar3: fmt plugin

--- a/rebar.config
+++ b/rebar.config
@@ -6,3 +6,6 @@
     {apps, [crdt]}
 ]}.
 
+{plugins, [
+    { fmt, ".*", {git, "https://github.com/kingwen0302/rebar3_plugin_fmt.git", {tag, "master"}}}
+]}.
