proper: crdt_test -> prop_crdt
crdt_test validated that crdt_server:add/2 and crdt_server:remove/2 acts like a
regular set over the crdt_server:members/0 with eunit.
prop_crdt makes the same examination with property based checking.

The statem tutorial of proper framework provided the basic knowledge for the test
 [tutorial]: https://proper-testing.github.io/tutorials/PropEr_testing_of_generic_servers.html)

However in our case the postcondition/3 cannot be used because postcondition/3
is run before state change and the observed state cannot compared with the
crdt_server:members/0. Therefore the check is evaulated in prop_crdt_server_acts_like_a_set/0.

--- a/rebar.config
+++ b/rebar.config
@@ -9,5 +9,15 @@
 ]}.
 
 {plugins, [
-    { fmt, ".*", {git, "https://github.com/kingwen0302/rebar3_plugin_fmt.git", {tag, "master"}}}
+    { fmt, ".*", {git, "https://github.com/kingwen0302/rebar3_plugin_fmt.git", {tag, "master"}}},
+    rebar3_proper
+]}.
+
+{profiles,
+    [{test, [
+        {deps, [
+            %% hex
+            {proper, "1.3.0"}
+        ]}
+    ]}
 ]}.
