--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,6 @@
 {erl_opts, [debug_info]}.
 {deps, [
-    {uuid, "1.7.4", {pkg, uuid_erl}}
+    {itc, {git, "https://github.com/nyirog/itc.git", {tag, "0.1.0"}}}
 ]}.
 
 {shell, [
